fix: center align ZenAvatarGroup children

--- a/src/components/zen-avatar-group/zen-avatar-group.scss
+++ b/src/components/zen-avatar-group/zen-avatar-group.scss
@@ -1,4 +1,4 @@
 :host {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
